fix(YOR-54): add 'No Events' message on mobile, when the calendar doesn't have any events

--- a/components/03-organisms/calendar/_yds-calendar.scss
+++ b/components/03-organisms/calendar/_yds-calendar.scss
@@ -295,3 +295,11 @@
     padding-left: var(--size-spacing-6);
   }
 }
+
+.calendar__no-events-message {
+  display: none;
+
+  &.is-visible {
+    display: block;
+  }
+}
